@@ -4,6 +4,6 @@ AUX postinstall-en-2.txt 661 RMD160 ea269ff2e998784b66642e89ab711a3055c9cf8f SHA
 AUX reconfig-2 880 RMD160 eb71fbb7b086e60e648f06828353baf9b3f8bec7 SHA1 442203fc0694b9591ee21baababc697c31ad65e4 SHA256 f08ef6e1258bb64d77fbf34bad33eee2e8556580509706eb17cbd2ae079e0a29
 AUX reconfig-3 929 RMD160 bbfe3889a7935497bc643910a53b4a471dc26360 SHA1 5abbbed7c1cb816ec5fbfc50347bf910742e5ce8 SHA256 e12beff2509e1d82e134fdb0b5ab43701931a877500af4989eae9ae7c595314d
 DIST otrs-2.4.7.tar.bz2 14292355 RMD160 5427ee356ab54951137fa3284df96ad9ddbeca5d SHA1 63d41a32bdae2462922081b30e25baffaaa4478a SHA256 0de2711e3680392461c233aaed22b38bb29745af22435427b015586ee19848ce
-EBUILD otrs-2.4.7.ebuild 3272 RMD160 6d69b43029ac2269317fb673a61962981d09a98c SHA1 069bafaa571b0c94e4e75d8a623c1efaacfcd696 SHA256 54e12c4d4a0f0134781ba4a74aef9c01ae44e1d56730258bb77a8d3ae2814f31
-MISC ChangeLog 1064 RMD160 f91195fa828dde1ca1ba9abf8acefaaf9010ce51 SHA1 d0dd16d549b96147062b9b7e49d298d377c9377a SHA256 913e79dc12747850c5f05f202f36d033782ce3224d497a4a6b09bc9b4770efba
-MISC metadata.xml 163 RMD160 2702ca9fabf7d46a5f20d0ecdff3f034e2fb6825 SHA1 b02f91b985b30647c767491550d384359e711348 SHA256 6d649396934834a6f17248ecc07bbc2df37910b2b441eda6f3f61cbc2fa36dd9
+EBUILD otrs-2.4.7.ebuild 3436 RMD160 8264076bbe1c2f3a5579738c7121efb67d845b68 SHA1 e7465a4af7f685edc2c1e3345dad4640859e95ab SHA256 51fc3d8403eae12d1c26e08d7e3235f03784f5f067b087475306d290706002ab
+MISC ChangeLog 1156 RMD160 de1e7b27a65f7e6408bf3f9bd124b9126751410b SHA1 5206543769195e00cb84335b086c68dea7a8660d SHA256 bd7bfddbf4987d0ea3b0c6b08ebc9e0e0fea4b1b033b2714d60d3a1d8e4ee25e
+MISC metadata.xml 206 RMD160 8dd7de79a9a1b903beddcd34cfaff09a75116392 SHA1 bbd1a4893458a7c784bec14353fbc79b69ee9a2f SHA256 8d5d94477eedf2db244efcce8f1c9ab36e01e6674a93e8e57581c305c4c34977
