@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>slepnoga</herd>
+  <herd>no-herd</herd>
+<use>
+<flag name='mod_perl'> </flag>
+</use>
 </pkgmetadata>
