@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.7.ebuild:
+  Fix DEPEND logic
+
   16 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> -otrs-2.4.5.ebuild,
   -otrs-2.4.6.ebuild, +otrs-2.4.7.ebuild:
   delete affected www-apps/otrs version and bump
